...
                                anglePrev = 0
                                valuePrev = 0
                            })
                            .onChanged({ value in
                                change(value: value)
                            }))
                .accessibility(identifier: "wheel-selector")

            Circle()
                .stroke(Color.ui.grey70, style: StrokeStyle(lineWidth: 2))
                .frame(width: getFrameSize(offset: -1), height: getFrameSize(offset: -1))
            
            Circle()
...
